//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  emails Email [not null]
  avatarUrl String
  role Role [not null]
  roleId String [not null]
  instance InstitutionInstance
  instanceId String
}

Table Role {
  id String [pk]
  slug String [unique, not null]
  name String [not null]
  description String [not null]
  User User [not null]
  permissions Permission [not null]
}

Table Permission {
  id String [pk]
  slug String [unique, not null]
  name String [not null]
  description String [not null]
  roles Role [not null]
}

Table Email {
  email String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  googleAccessToken String
  googleRefreshToken String
  user User [not null]
  userId String [not null]
}

Table ExternalLinks {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  url String [not null]
  name String [not null]
  emoji String [not null]
  scope ExternalLinkScope [not null]
  institutionInstance InstitutionInstance
  institutionInstanceId String
}

Table Articles {
  id String [pk]
  slug String [unique, not null]
  title String [not null]
  content String [not null]
  isPublished Boolean [not null, default: false]
  publishedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table InstitutionInstance {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  institutionName String [not null]
  institutionSlug String [unique, not null]
  validMailDomains String[] [not null]
  modules InstitutionInstanceModule [not null]
  User User [not null]
  externalLinks ExternalLinks [not null]
}

Table InstitutionInstanceModule {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  baseURL String [not null]
  isEnabled Boolean [not null, default: true]
  status String [not null]
  apiKey String
  expectedMajorVersion Int [not null]
  expectedMinorVersion Int [not null]
  instance InstitutionInstance [not null]
  instanceId String [not null]
  type InstitutionInstanceModuleType [not null]
  typeId String [not null]

  indexes {
    (instanceId, typeId) [unique]
  }
}

Table InstitutionInstanceModuleType {
  id String [pk]
  slug String [unique, not null]
  name String [not null]
  InstitutionInstanceModule InstitutionInstanceModule [not null]
}

Table PermissionToRole {
  permissionsId String [ref: > Permission.id]
  rolesId String [ref: > Role.id]
}

Enum ExternalLinkScope {
  INSTITUTION
  GROUP
  STUDENT
}

Ref: User.roleId > Role.id

Ref: User.instanceId > InstitutionInstance.id

Ref: Email.userId > User.id

Ref: ExternalLinks.institutionInstanceId > InstitutionInstance.id

Ref: InstitutionInstanceModule.instanceId > InstitutionInstance.id

Ref: InstitutionInstanceModule.typeId > InstitutionInstanceModuleType.id